--- a/index.html
+++ b/index.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html ng-app="gemStore">
+    <head>
+        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+        <script type="text/javascript" src="js/angular.min.js"></script>
+        <script type="text/javascript" src="js/products.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
+    </head>
 
-<head>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <script type="text/javascript" src="js/angular.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-</head>
+    <body ng-controller="StoreController as store" class="container">
+        <!--  Store Header  -->
+        <header>
+            <h1 class="text-center">Flatlander Crafted Gems</h1>
+            <h2 class="text-center">– an Angular store –</h2>
+        </header>
 
-<body class="container" ng-controller="StoreController as store">
-    <div class="product row" ng-repeat="product in store.products">
-        <h3>
-        {{product.name}}
-        <em class="pull-right">${{product.price}}</em>
-      </h3>
-    </div>
-</body>
+        <!--  Products Container  -->
+        <div class="list-group">
+            <!--  Product Container  -->
+            <div class="list-group-item" ng-repeat="product in store.products">
+                <h3>{{product.name}} <em class="pull-right">{{product.price | currency}}</em></h3>
 
+                <!-- Image Gallery  -->
+                <product-gallery></product-gallery>
+
+                <!-- Product Tabs  -->
+                <product-tabs></product-tabs>
+            </div>
+
+        </div>
+    </body>
 </html>
