Alterações para organizar código

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!--  Store Header  -->
         <header>
             <h1 class="text-center">Flatlander Crafted Gems</h1>
-            <h2 class="text-center">– an Angular store –</h2>
+            <h2 class="text-center">– an AngularJS store –</h2>
         </header>
 
         <!--  Products Container  -->
